<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_materiales_s"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Materiales_Seriados">

    <EditText
        android:id="@+id/funcionario_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_text"
        android:hint="@string/funcionario"
        android:textColor="@color/text"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/grupo_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/box_text"
        android:hint="@string/grupo"
        android:textColor="@color/text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/funcionario_s"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />


    <LinearLayout
        android:id="@+id/grid"
        android:orientation="horizontal"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/grupo_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/formato"
                android:textColor="@color/text"
                android:hint="@string/formato"
                android:layout_height="wrap_content"
                android:background="@drawable/box_text"
                />
            <EditText
                android:id="@+id/prefijo"
                android:hint="@string/prefijo"
                android:textColor="@color/text"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_text"
                app:layout_constraintTop_toBottomOf="@+id/caracter"
                tools:layout_editor_absoluteX="0dp" />
            <EditText
                android:hint="@string/valor_inicial"
                android:id="@+id/valorInicial"
                android:textColor="@color/text"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_text"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/caracter"
                android:hint="@string/caracter"
                android:layout_width="match_parent"
                android:textColor="@color/text"
                android:layout_height="wrap_content"
                android:background="@drawable/box_text"
                app:layout_constraintTop_toBottomOf="@+id/formato"
                tools:layout_editor_absoluteX="0dp" />
            <EditText
                android:hint="@string/sufijo"
                android:id="@+id/sufijo"
                android:textColor="@color/text"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/box_text"
                />
            <EditText
                android:id="@+id/cantidad_mat_s"
                android:hint="@string/cantidad"
                android:textColor="@color/text"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_text"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/agregar_material_s"
        android:layout_marginTop="3dp"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        app:layout_constraintTop_toBottomOf="@+id/grid"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>