<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout_auth"
    android:layout_height="match_parent"
    tools:context=".Login">


 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:ignore="UselessParent">

         <TextView
             android:layout_marginTop="130dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:letterSpacing="0.1"
             android:text="@string/autenticaci_n"
             android:textColor="@color/text"
             android:textSize="40sp"
             android:textStyle="bold" />
         <!--  Cuerpo  -->
         <EditText
             android:padding="8dp"
             android:textAlignment="center"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:layout_marginTop="50dp"
             android:id="@+id/servidor"
             android:background="@drawable/box_text"
             android:inputType="text"
             android:hint="@string/ingrese_un_servidor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:importantForAutofill="no" />

         <EditText
             android:padding="8dp"
             android:inputType="text"
             android:layout_marginTop="10dp"
             android:textAlignment="center"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:background="@drawable/box_text"
             android:hint="@string/ingrese_un_dominio"
             android:id="@+id/dominio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:importantForAutofill="no" />

         <EditText
             android:padding="8dp"
             android:layout_marginTop="10dp"
             android:textAlignment="center"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:hint="@string/c_dula_usuario"
             android:inputType="number"
             android:background="@drawable/box_text"
             android:id="@+id/cc_auth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:importantForAutofill="no" />
         <EditText
             android:padding="8dp"
             android:inputType="number"
             android:layout_marginTop="10dp"
             android:textAlignment="center"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:background="@drawable/box_text"
             android:hint="@string/c_digo_de_usuario"
             android:id="@+id/cod_auth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:importantForAutofill="no" />

         <Button
             android:id="@+id/btnAuth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
             android:layout_marginTop="30dp"
             android:layout_marginRight="80dp"
             android:text="@string/autenticarme"
             android:textAlignment="center" />

     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>