<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_materiales"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Materiales">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:enabled="false"
        android:id="@+id/funcionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_text"
        android:hint="@string/funcionario"
        android:textColor="@color/text"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_text"
        android:hint="@string/cantidad"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/text"
        app:layout_constraintTop_toBottomOf="@+id/funcionario"
        tools:layout_editor_absoluteX="0dp" />
    <EditText
        android:id="@+id/observacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:background="@drawable/box_text"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/observaci_n"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cantidad"
        android:textColor="@color/text"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/agregar"
        android:layout_marginTop="3dp"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        app:layout_constraintTop_toBottomOf="@+id/observacion"
        tools:layout_editor_absoluteX="0dp" />


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/agregar"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>